<resources>
    <string name="number" translatable="false">0</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="cpu_format" translatable="false">🎛️ %2d%% %.1f℃</string>
    <string name="coolapk_link" translatable="false">http://www.coolapk.com/u/1212220</string>
    <string name="qq_group_link" translatable="false">https://jq.qq.com/?_wv=1027&amp;k=ZsyKpCP8</string>
    <string name="qq_channel_link" translatable="false">https://qun.qq.com/qqweb/qunpro/share?_wv=3&amp;_wwv=128&amp;appChannel=share&amp;inviteCode=1W6opB7&amp;appChannel=share&amp;businessType=9&amp;from=246610&amp;biz=ka</string>
    <string name="tg_link" translatable="false">tg://join?invite=sjDX1oTk31ZmYjY1</string>
    <string name="tg_https_link" translatable="false">https://t.me/+sjDX1oTk31ZmYjY1</string>
    <string name="tg_channel_link" translatable="false">tg://resolve?domain=freezeitRelease</string>
    <string name="tg_channel_https_link" translatable="false">https://t.me/freezeitRelease</string>
    <string name="github_link" translatable="false">https://github.com/jark006</string>
    <string name="github_rel_link" translatable="false">https://github.com/jark006/freezeitRelease</string>
    <string name="github_app_link" translatable="false">https://github.com/jark006/freezeitapp</string>
    <string name="lanzou_link" translatable="false">https://jark006.lanzout.com/b017oz9if</string>
    <string name="thanks_list" translatable="false">
        感谢以下小伙伴对冻它的捐赠支持，截止至2023年3月4日，大致以时间从最近到最久排序：
        \n\n微信：凡梦/*惠，*花X4，*林X2，*🌈，*长，*彬，*寒，*宾，*叁，*爸，*(加油!)，*包，*彭，*阳，*。，*我，*G，*行，*勾，g*d，*！，*子，P*e,*月，*名，*0，*邻，*，G*t，*夏，*岸，*骞，*春，*棋，*酸，*猫，A*3，*谏。
        \n\n支付宝：**鑫X2，卡卡罗宾，*静，*郎，*炀，**豪，**鹏，**昕，**泽，**国，**晖，**秀，**民，**超，*金阳，*宽，*森，*锋，**良，**义。
        </string>
    <string name="privacy_content" translatable="false">
        更新日期：2023/03/04
        \n\n导言
        \n\n冻它 是一款由 JARK006 （以下简称“我们”）提供的在安卓平台实现部分墓碑机制的软件，以下协议是本软件相关的具体协议内容，如对本《隐私政策》或相关事宜有任何问题，请通过 jark006@qq.com 与我们联系。

        \n\n一、 我们收集的信息
        \n\n我们仅收集用户设备上的”应用列表及相关信息“、”实时进程信息“及“设备硬件相关信息”，这些信息全部保存再设备本地，不会以任何形式上传或转移到设备外部。也不会收集任何关于个人的隐私信息。

        \n\n二、 我们如何使用这些信息
        \n\n1.我们使用“应用列表”提供给用户进行配置哪些应用切到后台时以哪种方式冻结。
        \n2.我们使用实时进程信息进行具体的冻结、解冻操作，同时提供进程内存占用，运行状态等类似进程管理的可视化页面。

        \n\n三、 权限使用
        \n\n我们将使用以下权限确保各项功能正常，不会干扰设备正常运作，更不会用于读取或分析您的私密信息。
        \n1. 获取应用列表权限
        \n(1) android.permission.QUERY_ALL_PACKAGES
        \n2. 查看网络状态及网络权限，仅用于获取版本更新信息和更新日志
        \n(1) android.permission.ACCESS_NETWORK_STATE
        \n(2) android.permission.INTERNET

        \n\n四、 我们如何更新隐私政策
        \n\n1. 我们保留不时更新或修订本政策的权利。这些更新与修订将构成本政策的一部分并具有等同于本政策的效力，未经您明确同意，我们不会削减您依据当前生效的本政策所应享受的权利。
        \n2. 如遇本政策更新，新的政策信息将内置到新版应用，跟随应用一起发布。

        \n\n五、 如何联系我们
        \n\n如果您对我们的应用权限和安全策略有任何顾虑和疑惑，可随时通过邮箱 jark006@qq.com 向我们反馈以及获得帮助。
    </string>
    <string name="app_name">Freezeit</string>
    <string name="title_home">Home</string>
    <string name="title_config">Config</string>
    <string name="title_logcat">Log</string>
    <string name="icon">Icon</string>
    <string name="communityTitle">Community</string>
    <string name="coolapk_text">Coolapk @JARK006</string>
    <string name="qq_group_text">QQ Group 781222669</string>
    <string name="qq_channel_text">QQ Channel [冻它模块]</string>
    <string name="tg_group_text">Telegram Group</string>
    <string name="tg_channel_text">Telegram Channel</string>
    <string name="update_app_label">Update Apps</string>
    <string name="get_log_fail_tips">Failed to get work log</string>
    <string name="get_changelog_fail_tips">Failed to get Changelog</string>
    <string name="about">About</string>
    <string name="freezeit_offline">Freezeit is not installed or running</string>
    <string name="app_label">App label</string>
    <string name="update_success">Update success</string>
    <string name="update_fail">Update fail</string>
    <string name="update_start">Updating AppLabel</string>
    <string name="clear_log_text">Clear</string>
    <string name="clear_log_tips">Cleared</string>
    <string name="xposed_description">Disable ANR, wakelocks and alarm, clear broadcasts (to prevent dialing stuck, installation stuck, etc.). Disable powerkeeper kill background apps in MIUI.</string>
    <string name="magisk_online">Magisk</string>
    <string name="magisk_offline">Magisk  Inactivated</string>
    <string name="xposed_online">LSPosed Activated</string>
    <string name="xposed_offline">LSPosed Inactivated</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_task_manager">APP CPU Time</string>
    <string name="cluster_title">Cluster Bind ⓘ</string>
    <string name="freeze_timeout_title">Freeze Timeout ⓘ</string>
    <string name="wakeup_timeout_title">Regular Wakeup ⓘ</string>
    <string name="terminate_timeout_title">Terminate Timeout ⓘ</string>
    <string name="freeze_mode_title">Freezer Type ⓘ</string>
    <string name="slowly_tips">Be Slowly</string>
    <string name="help">Help</string>
    <string name="check_freezer">check_freezer_status</string>
    <string name="freezeit_tutorial_text">Freezeit Tutorial</string>
    <string name="xposed_warn">Xposed unactive, stop working</string>
    <string name="freezeit_error_tips">
        1. It takes 1 minute to init after first unlock, please open it again later.
        \n2. Please check if the Freezeit module is enabled or not.
        \n3. Please check the network permissions of Freezeit APP.
        \n4. Check the exception log [ /sdcard/Android/freezeit_crash_log.txt ]
        \n5. If the device has not yet installed the Freezeit(MagiskModule), please download and install it via the jump button below.
        \n6. If the device has not yet acquired Root permission, it will not be able to use Freezeit.
    </string>
    <string name="download">Download</string>
    <string name="second">sec</string>
    <string name="minute">min</string>
    <string name="lanzou_password">Lanzou Password: dy6i</string>
    <string name="donate_wechat">Donate Wechat</string>
    <string name="donate_alipay">Donate Alipay</string>
    <string name="github_publish">Github Publish</string>
    <string name="doze_title">OffScreen Doze ⓘ</string>
    <string name="lmk_title">Adjust LMK Parameter ⓘ</string>
    <string name="current_title">Adjust Current ⓘ</string>
    <string name="battery_title">Battery Monitor ⓘ</string>
    <string name="radical_fg_title">Radical Foreground ⓘ</string>
    <string name="break_network_title">QQ BreakNetwork ⓘ</string>
    <string name="developer">Developer JARK006</string>
    <string name="physical_ram_text">[RAM] Total: %.2f GiB\nUse: %.1f%% Remain: %.2f %s</string>
    <string name="virtual_ram_text">[SWAP] Total: %.2f GiB\nUse: %.1f%% Remain: %.2f %s</string>
    <string name="cluster_tips">
        Binding freezeit process to a cluster, restart effective.
        \n4+4 architecture: Efficiency core [0~3], Performance core [4~7]
        \n4+3+1 architecture: Efficiency core [0~3], Performance core [4~6] Prime core [7]
        \n3+2+2+1 architecture: Efficiency core [0~2], Performance core [3~4], Performance+ core [5~6], Prime core [7]</string>
    <string name="freeze_timeout_tips">How long does it take to freeze an application that is set to freeze after it enters the background, it is not recommended to freeze it in seconds</string>
    <string name="wakeup_timeout_tips">Timed to unfreeze frozen background applications, the unfreeze duration is [Timeout Freeze] parameter. If the application often flash bounce and flash back, it is recommended to adjust the short time, it is not easy to freeze. Set to the maximum value of 120 to turn off timed thawing. If there is a memory leak with FreezerV1, please do not turn it off, otherwise it will not be able to release memory.</string>
    <string name="terminate_timeout_tips">How long it takes to kill an app set to [Terminate] after it enters the background</string>
    <string name="freeze_mode_tips">
        Each application is available in either SIGSTOP or Freezer mode. And Freezer mode has 2 versions.
        \nKernel version 4.9 and below only support V1, 4.14~4.19 support V1 and incomplete V2 (not enabled by default), 5.4 onwards support complete V2.
        \nFrozen and uid mode only different paths, the difference is not significant, it is recommended to use frozen in preference.
        \nReboot takes effect.
    </string>
    <string name="radical_fg_tips">Slightly power saving task switching recognition, not supported by some systems, may cause freeze/unfreeze to fail. Reboot effective</string>
    <string name="battery_tips">Record battery charge/discharge time, power, temperature, etc.</string>
    <string name="current_tips">Current or power values close to or equal to 0 need to be turned on, common in OPPO/VIVO system</string>
    <string name="break_network_tips">When freezing QQ/TIM, disconnect its network and let HMSPush or MiPush take over the message pushing, freezeit tutorial with HMSPush tutorial</string>
    <string name="lmk_tips">Adjust lmk parameters to ease the kill background, reboot to take effect</string>
    <string name="doze_tips">Although the system will enter Doze (low-power standby mode) by default, it is mostly a light doze, and it is even slower to enter deep Doze. After opening, the rest screen state timeout 3 minutes, try to force into the deep Doze, except for the charging state or playing. Some systems may enter the light Doze early to cause freezing it intermittently suspended operation, and then delayed to enter the deep Doze</string>
    <string name="setup_successful">Setup successful</string>
    <string name="setup_failed">Setup failed</string>
    <string name="no_response">No response, setting failed</string>
    <string name="get_settings_fail">Setting data acquisition failure</string>
    <string name="update_cache">Update Cache</string>
    <string name="new_version">New Version</string>
    <string name="beta_version">Beta Version</string>
    <string name="online_version">Online Version</string>
    <string name="current_version">Current Version</string>
    <string name="online_changelog">History Changelog</string>
    <string name="extend_fg_tips">Some systems will modify the foreground/background state mechanism (some COS 11), resulting in some foreground applications not being recognized correctly and being frozen. If you have encountered this situation, then you need to turn it on and reboot to take effect. If everything is fine then it is recommended to turn off</string>
    <string name="config_help_text">
        \n[Terminate]:Use SIGKILL signal to terminate app, instead of freezing.
        \n[SIGSTOP]:Use SIGSTOP signal to freeze.
        \n[Freezer]:Use cgroup\'s Freezer subsystem to freeze.
        \n[Free]:The application will not freeze and can run freely in the background.

        \n\n[Strictly]:The application Activity is considered to be in the foreground when it is displayed in the top level (TOP) or bound to the top level (BOUND_TOP) app.
        \n[Lenient]:If it meets the conditions of strict foreground, or when there are foreground services such as floatingView, resident notification bar, audio playback service, it is judged as foreground and will not be frozen.

        \n\nSome special applications (input method, launcher, Magisk, etc.) will force whitelist.
    </string>
    <string name="help_logcat_update">Update the app label, no longer use the package name to log.</string>
    <string name="help_logcat_check">Check freeze status, memory usage</string>
    <string name="help_logcat_clear">Clear log</string>
    <string name="save">Save</string>
    <string name="convert_freezer_sigstop">Convert Freezer / SIGSTOP</string>
    <string name="convert_strict">Convert Strict / Lenient</string>
    <string name="switch_sys_user">Switch sys/third App</string>
</resources>