<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/config_help_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_circle_24dp"
                android:contentDescription="@string/icon"
                android:padding="15dp"
                android:src="@drawable/ic_android_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/switch_sys_user" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_circle_24dp"
                android:contentDescription="@string/icon"
                android:padding="15dp"
                android:src="@drawable/ic_convert2_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/convert_strict" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_circle_24dp"
                android:contentDescription="@string/icon"
                android:padding="15dp"
                android:src="@drawable/ic_convert_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/convert_freezer_sigstop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_circle_24dp"
                android:contentDescription="@string/icon"
                android:padding="15dp"
                android:src="@drawable/ic_save_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>