<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:background="@drawable/ic_circle_24dp"
            android:src="@drawable/ic_update_label_24dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_logcat_update"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:background="@drawable/ic_circle_24dp"
            android:src="@drawable/ic_check_freezer_24dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_logcat_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:background="@drawable/ic_circle_24dp"
            android:src="@drawable/ic_clear_log_24dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_logcat_clear"/>
    </LinearLayout>
</LinearLayout>