<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white_background"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/coolapk_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/avatar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/developer"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/github_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_github" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/github_publish"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lanzou_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_lanzou" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/lanzou_password"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/qq_group_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_qq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/qq_group_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/qq_channel_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_qqchannel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/qq_channel_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/telegram_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_telegram" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/tg_group_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tutorial_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/freezeit_tutorial_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/changelog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_logcat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/online_changelog"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/wechat_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_wechatpay" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/donate_wechat"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alipay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    android:padding="5dp"
                    app:srcCompat="@drawable/logo_alipay" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/donate_alipay"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/versionName" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>