<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/icon"/>

    <TextView
        android:id="@+id/app_label"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/app_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userTimeDelta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:singleLine="true"
                android:typeface="monospace"
                android:textColor="?attr/colorSecondary"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/sysTimeDelta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:singleLine="true"
                android:typeface="monospace"
                android:textColor="?attr/colorSecondary"
                android:text="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userTimeSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:singleLine="true"
                android:typeface="monospace"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/sysTimeSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:singleLine="true"
                android:typeface="monospace"
                android:text="@string/todo" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>